--- a/.tigrc
+++ b/.tigrc
@@ -3,5 +3,7 @@ bind status C !<git commit
 # Commit amend
 bind generic = !<git commit --amend
 bind tree u !@git add %(directory)
+bind status S !?git stash save --keep-index %(prompt)
 
 set vertical-split = horizontal
+set split-view-height = 90%
